package com.leo.principles.p2_RichterSubstitutionPrinciple.after;

/**
 * @author leijiong
 * @version 1.0
 */
public interface Quadrilateral {

    double getLength();
    double getWidth();
}
